--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,19 @@
 {
-    "version": 2,
-    "name": "music-album",
-    "builds": [
-       { "src": "index.js", "use": "@vercel/node" }
-    ],
-    "routes": [
-       { "src": "/(.*)", "dest": "/index.js" }
-    ]
- }
+  "version": 2,
+  "builds": [
+    {
+      "src": "index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/index.js"
+    }
+  ],
+  "env": {
+    "MONGO_URL": "@mongo_url",
+    "PORT": "8081"
+  }
+}
